--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,8 +7,20 @@ http {
         server paddle-api:8000;
     }
 
+    upstream paddle {
+        server paddle:3000;
+    }
+
     server {
         listen 80;
+
+        location / {
+            proxy_pass http://paddle/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
         location /api/ {
             proxy_pass http://paddle-api/api/;
             proxy_set_header Host $host;
