--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,4 +28,32 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
+
+    server {
+
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name example.com;
+
+        ssl_certificate /certs/server.crt;
+        ssl_certificate_key /certs/server.key;
+
+        location / {
+            proxy_pass http://paddle/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /api/ {
+            proxy_pass http://paddle-api/api/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
 }
